# zero2prod

./: .env  Cargo.toml  configuration.yaml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
tests/: health_check.rs
